# curve-stablecoin-dashboard

./: .env-example  .gitignore  .pre-commit-config.yaml  Dashboard.py  LICENSE.txt  README.MD  pyproject.toml  settings.py
data/: deployments.py  deployments_1.py  overall_stats.py  overall_stats_2.py  position_plot_4.py  postitions_3.py  utils.py
data/contracts/: __init__.py  amm.py  base.py  controller.py  controller_factory.py  erc20.py  lending__one_way_factory.py  lending__price_oracle.py  lending__vault.py  peg_keeper.py  policy.py  price_aggregator.py  stablecoin.py  stableswap.py  stableswap_factory.py
data/contracts/abi/: amm.py  controller.py  controller_factory.py  lending__one_way_lending_factory.py  lending__price_oracle.py  lending__vault.py  peg_keeper.py  policy.py  price_agg.py  price_oracle.py  stablecoin.py  stableswap.py  stableswap_factory.py
data/pages/: __init__.py  crvusd_3.py  deployments_1.py  overall_stats_2.py  policy_rate_4.py  position_plot_4.py  position_plot_6.py  position_plot_8.py  positions_5.py  positions_7.py  postitions_3.py
data/utils/: constants.py  multicall.py  multicall_abi.py  utils.py
pages/: 1_⚙️_Deployments.py  2_📊_Overall_Stats.py  3_💳_Positions.py  3_💳_Postitions.py  3_🚀_Crvusd.py  4_📉_Losses_Plot.py  4_📝_Monetary_policy_rate.py  5_💳_Positions.py  6_📉_Losses_Plot.py  7_💳_Lending_Positions.py  7_📉_Lending_Losses_Plot.py  8_📉_Lending_Losses_Plot.py
