[tool.poetry]
name = "curve dashboard"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = ""
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10.4"
poetry = "1.4.1"
streamlit = "^1.23.1"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
web3 = "^6.5"
plotly = "^5.15.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
(
  /(
    \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | alembic
  )/
)
'''
line-length = 120
target_version = ['py310']

[tool.isort]
profile = "black"
py_version = 310
known_first_party = "poetry"
